# mqtt

./: .clang-tidy  .clangd  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  SECURITY.md  broker.ini  coverage.profdata  pi@yahapi  run_coverage.py
.VSCodeCounter/2026-04-17_12-38-16/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2026-04-17_17-06-05/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2026-04-17_17-58-21/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2026-04-17_19-46-19/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2026-04-17_20-51-34/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2026-04-18_01-07-12/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.claude/: settings.local.json
.claude/commands/: bug-fixing.md  build.md  client-robustness.md  code-create.md  cpp-dev.md  deployment.md  file-service-robustness.md  github-pr.md  http-mqtt-interface-robustness.md  integration-test.md  message-store-service-robustness.md  refactoring.md  remote-service-robustness.md  robustness.md  unit-test.md  value-service-robustness.md  yaha-client-architektur.md  yaha-log.md  yaha-spec.md  zwave-service-robustness.md
.github/: copilot-instructions.md
cmake/: controlapp.conf  create_yaha_deployment.py  deploy.sh  deploy_yaha_scp.py  openzwave_static.cmake
cmake/ini/: automation.ini  broker.ini  brokerconnector.ini  filestore.ini  httpmqttinterface.ini  msgstore.ini  remoteservice.ini  rs485interface.ini  valueservice.ini  zwave.ini
cmake/nginx/: controlapp.conf
cmake/toolchains/: arm-linux-gnueabihf.cmake  armv6-linux-gnueabihf.cmake  armv6-zig.cmake  armv7-zig.cmake
spec/: MQTT Version 5.0.html  anforderungskatalog.md  implementation-plan.md  integration-test-plan-check.md  integration-test-plan.md  mqtt-client-implementation-plan.md  mqtt-test-client-implementation-plan.md  mqttx-all-help.txt  performance-test-plan.md  rules_examples.txt  threading-refactoring-step-01-network-helpers.md  threading-refactoring-step-02-executor-primitives.md  threading-refactoring-step-03-broker-facades.md  threading-refactoring-step-04-io-reactor.md  threading-refactoring.md  todo-automation-client-error-handling-report.md  todo-file-service-error-handling-report.md  todo-http-mqtt-interface-error-handling-report.md  todo-message-store-service-error-handling-report.md  todo-remote-service-error-handling-report.md  todo-value-service-error-handling-report.md  todo-zwave-service-error-handling-report.md  tracing-anti-storm-plan.md
spec/@mangar2/: sonar-project.properties
spec/MQTT Version 5.0_files/: IMPL-messagestore.md  saved_resource.html
spec/done/: 1.1.4-empty-client-id-assigned-client-identifier.md  connect_connection_errors_malformed_packet_disconnect_81_and_close.md  connect_properties_request_response_information_one.md  connect_properties_session_expiry_max_never_expires.md  connect_properties_session_expiry_positive_persists_session.md  inflight-store-redesign.md  integration-test-plan-check.md  mqtt-test-client-implementation-plan.md  persistence-durability-plan.md  publish_qos1_no_matching_subscribers_reason.md  publish_qos1_not_authorized_reason.md  publish_qos2_not_authorized_reason.md  publish_qos2_pubrec_error_aborts.md  publish_qos2_pubrel_retransmission.md  stream-buffer-redesign.md  thread-safety-inventory.md  threading-qos0-flow.md
spec/obsolete-refactoring-plans/: lock-thread-safety-analysis.md  threading-refactoring-step-05-final.md  threading-refactoring-step-05-worker-integration.md  threading-store-session-sync.md
spec/qapla/: pgn-tokenizer.cpp
spec/todo/: connect_properties_maximum_packet_size_enforced.md  connect_properties_session_expiry_zero_discards_session.md  connect_session_takeover_second_client_disconnects_first_with_8e.md  interop_20_2_1_empty_topic_filter_subscribe_rejected.md  retain_retained_expiry_message_removed_after_expiry.md  robustness_connection_abuse_idle_tcp_timeout.md  structured_tracing_json_lines.md
spec/yaha/: AUDIT-rs485interface-reconstruction-matrix.md  IMPL-automation-client-rule-validation-http.md  IMPL-broker-connector.md  IMPL-http-mqtt-interface.md  IMPL-messagestore.md  IMPL-remoteservice.md  IMPL-rs485interface-checklist.md  IMPL-rs485interface.md  IMPL-valueservice.md  IMPL-zwave.md  JOURNAL.md  SPEC-IMqttComponent.md  SPEC-automation-message-generation.md  SPEC-automation.md  SPEC-broker-connector-contracts.md  SPEC-broker-connector.md  SPEC-filestore.md  SPEC-http-interfaces-gui.md  SPEC-http-mqtt-bridge.md  SPEC-http-mqtt-interface.md  SPEC-message.md  SPEC-messagestore.md  SPEC-messagetree.md  SPEC-remoteservice.md  SPEC-rs485interface.md  SPEC-valueservice.md  publish.php  (+2 more)
src/: SPEC.md  main.cpp  test_client_main.cpp  yaha_automationclient_main.cpp  yaha_brokerconnectorclient_main.cpp  yaha_filestoreclient_main.cpp  yaha_httpmqttinterfaceclient_main.cpp  yaha_msgstoreclient_main.cpp  yaha_remoteserviceclient_main.cpp  yaha_rs485interfaceclient_main.cpp  yaha_valueserviceclient_main.cpp  yaha_zwaveclient_main.cpp
test/: auto_checkin_pr.py  broker.ini  broker.ws copy 2.ini  broker.ws.ini  broker2.ws.ini  broker_tests.selection.txt  build_armv6_and_deploy.py  clients_tests.selection.txt  collect_trace.sh  connector.ini  deploypi.py  integration_client_shell_cases.py  performance_test_results.json  rules.json  run_coverage.py  run_coverage.summary.json  run_coverage_broker.py  run_coverage_clients.py  run_integration_tests.py  run_load_single_topic.py  run_performance_tests.py  tmp_pair_connect.json  tmp_pair_publish.json  tmp_pair_publish_real_predecessor.json
tmp/: filestore.ini  yahabroker.service  yahamsgstoreclient.service
(+1049 files in other folders)
